--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,10 +14,11 @@ spring:
       ddl-auto: update
     properties:
       hibernate:
+        #        use-new-id-generator-mappings: true
         dialect: org.hibernate.dialect.MySQL5Dialect
         format_sql: true
-          #        id:
-          #          new_generator_mappings: false
+          #                  id:
+          #                    new_generator_mappings: false
           #          TODO what is it
 
 security:
@@ -25,7 +26,7 @@ security:
     token:
       secret-key: secret-key
       #      TODO change
-      expire-length: 36000
+      expire-length: 3600000 #1 hour
 
 UserController:
   signin: Authenticates user and returns its JWT token.
