--- a/Capstone-Email/src/main/resources/application.properties
+++ b/Capstone-Email/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=LocalStandUp@mail.ru
+spring.mail.username=localstandup.notification@gmail.com
 spring.mail.password=funny007
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
