--- a/Capstone-Email/src/main/resources/application.properties
+++ b/Capstone-Email/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.username=sa
 #spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+web.service.verify =http://localhost/users/verify
