--- a/Capstone-Web/src/main/resources/application.yml
+++ b/Capstone-Web/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/capstone
+    url: jdbc:mysql://mysql:3306/capstone
     username: root
     password: garage2
     driverClassName: com.mysql.jdbc.Driver
@@ -35,7 +35,7 @@ UserController:
   search: Returns specific user by username
   me: Returns current user's data
 server:
-  port: 80
+  port: 8080
 
 services:
   email: http://localhost:8081/notification
