add healthcheck in docker compose,minor fixes

--- a/Capstone-Email/src/main/resources/application.properties
+++ b/Capstone-Email/src/main/resources/application.properties
@@ -20,4 +20,4 @@ spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-web.service.verify =http://webapp/users/verify
+web.service.verify =http://localhost/users/verify
