--- a/Capstone-Email/src/main/resources/application.properties
+++ b/Capstone-Email/src/main/resources/application.properties
@@ -11,7 +11,6 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 # TLS , port 587
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-
 server.port=8081
 
 spring.datasource.url=jdbc:h2:mem:testdb
@@ -21,3 +20,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 web.service.verify =http://localhost/users/verify
+spring.application.name=notification-app
+
+eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+#eureka.client.service-url.default-zone=http://eureka:8761/eureka/
