--- a/Capstone-Email/src/main/resources/application.properties
+++ b/Capstone-Email/src/main/resources/application.properties
@@ -15,12 +15,10 @@ server.port=8081
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 web.service.verify =http://localhost/users/verify
 spring.application.name=notification-app
 
-eureka.client.service-url.default-zone=http://localhost:8761/eureka/
-#eureka.client.service-url.default-zone=http://eureka:8761/eureka/
+#eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+eureka.client.service-url.default-zone=http://eureka-server:8761/eureka/
