--- a/Capstone-Eureka-Server/src/main/resources/application.yml
+++ b/Capstone-Eureka-Server/src/main/resources/application.yml
@@ -10,5 +10,5 @@ eureka:
     register-with-eureka: false
     fetch-registry: false
     serviceUrl:
-      defaultZone: http://localhost:${server.port}/eureka/
-#      defaultZone: http://eureka-server:${server.port}/eureka/
+#      defaultZone: http://localhost:${server.port}/eureka/
+      defaultZone: http://eureka-server:${server.port}/eureka/
