--- a/Capstone-Zuul/src/main/resources/application.yml
+++ b/Capstone-Zuul/src/main/resources/application.yml
@@ -12,5 +12,5 @@ eureka:
 
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-#      defaultZone: http://eureka:8761/eureka/
+#      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://eureka-server:8761/eureka/
