--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,9 @@ services:
     build: ./Capstone-Web
     depends_on:
     - mysql
+    - eukeka-server
     ports:
-    - "8080:8080"
+    - "8082:8082"
     environment:
     - DATABASE_HOST=mysql
     - DATABASE_NAME=capstone
@@ -38,17 +39,33 @@ services:
       retries: 3
 
   notification-app:
-#    container_name: notification-app
+    container_name: notification-app
     build: ./Capstone-Email
     depends_on:
       - webapp
+      - eukeka-server
     ports:
-      - "8081"
+      - "8081:8081"
     healthcheck:
       test: curl -sS http://127.0.0.1 || echo 1
       interval: 5s
       timeout: 10s
       retries: 3
+
+  zuul:
+    container_name: zuul
+    build: ./Capstone-Zuul
+    depends_on:
+    - eukeka-server
+    ports:
+      - "8080:8080"
+
+
+  eukeka-server:
+    container_name: eureka-server
+    build: ./Capstone-Eureka-Server
+    ports:
+      - "8761:8761"
 
 volumes:
   mysql-db:
