--- a/Capstone-Web/src/main/resources/application.yml
+++ b/Capstone-Web/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: webapp
   datasource:
-    url: jdbc:mysql://database:3306/capstone?serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/capstone?serverTimezone=UTC
     username: root
     password: root
     driverClassName: com.mysql.jdbc.Driver
