--- a/Capstone-Web/src/main/resources/application.yml
+++ b/Capstone-Web/src/main/resources/application.yml
@@ -4,8 +4,8 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/capstone?serverTimezone=UTC
     username: root
-    password: root
-    driverClassName: com.mysql.jdbc.Driver
+    password: garage2
+    driverClassName: com.mysql.cj.jdbc.Driver
 
   jpa:
     hibernate:
