--- a/Capstone-Web/src/main/resources/application.yml
+++ b/Capstone-Web/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: webapp
   datasource:
-    url: jdbc:mysql://localhost:3306/capstone?serverTimezone=UTC
+    url: jdbc:mysql://database:3306/capstone?serverTimezone=UTC
     username: root
-    password: garage2
+    password: root
     driverClassName: com.mysql.cj.jdbc.Driver
 
   jpa:
